--- a/src/app.json
+++ b/src/app.json
@@ -154,7 +154,7 @@
         "product": "touch",
         "minVersion": 3,
         "debug": false,
-        "logger": "no"
+        "logger": false
     },
 
     /**
